<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ntnu.idatt2506.assignment_02.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:text="@string/main_activity"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_generate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:onClick="onGenerateNumberClicked"
        android:text="@string/generate_number" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_generate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="onCalculateClicked"
        android:text="@string/calculate" />

</RelativeLayout>